tests/paczka1/small_fuzzy/26120762.err
Error in line 8: 32lq9bnTgc S·62 23,9
Error in line 13: lyY7bQnSa S796 58,4
